--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,7 @@ layout: compress
                         <i class="fa fa-chevron-left"></i>
                     </a>
                 </div>
+                {% include toc.html %}
                 {{ content }}
                 <div class="entry-meta">
                 {% include meta.html %}
@@ -47,3 +48,10 @@ layout: compress
     {% endif %}
 </body>
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
